--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel index.html -p 8080 --open",
-    "build": "parcel build index.html"
+    "dev": "yarn clean && yarn start",
+    "clean": "rm -rf ./.cache ./dist",
+    "build": "parcel build index.html --public-url ./"
   },
   "dependencies": {
     "parcel": "^1.12.4",
